--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-deploy-cli",
+  "name": "react-deploy-branch-cli",
   "description": "CLI tools to deploy react-app to S3 and CloudFront",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "main": "index.js",
   "bin": {
     "react-deploy": "./index.js"
@@ -16,12 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sumn2u/react-deploy-cli.git"
+    "url": "git+https://github.com/artursmirnov/react-deploy-cli.git"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "Suman Kunwar",
+  "author": "Artur Smirnov",
   "license": "MIT",
   "devDependencies": {
     "chai": "^1.9.2",
